--- a/custom/dev/employee_late_check_in/views/hr_attendance_views.xml
+++ b/custom/dev/employee_late_check_in/views/hr_attendance_views.xml
@@ -144,7 +144,7 @@
     <record id="hr_attendance.hr_attendance_reporting" model="ir.actions.act_window">
         <field name="name">Attendances</field>
         <field name="res_model">hr.attendance</field>
-        <field name="view_mode">graph,pivot</field>
+        <field name="view_mode">pivot,graph</field>
         <field name="search_view_id" ref="hr_attendance_view_filter_override"/>
         <field name="context">
             {
