employee_late_check_in: update attendance report wizard fix bug and add check in time for present

--- a/odoo-17.0/addons/muk_web_colors/templates/webclient.xml
+++ b/odoo-17.0/addons/muk_web_colors/templates/webclient.xml
@@ -6,7 +6,7 @@
         <xpath expr="//meta[@name='theme-color']" position="replace">
             <meta 
             	name="theme-color" 
-            	t-att-content="'#242733' if request.httprequest.cookies.get('color_scheme') == 'dark' else '#714B67'"
+            	t-att-content="'#242733' if request.httprequest.cookies.get('color_scheme') == 'dark' else '#00476b'"
             />
         </xpath>
     </template>
