hr_zk_attendance: fix bug alert_flag not show sum whwn become compute-feild

--- a/custom/dev/hr_zk_attendance/views/hr_attendance_view.xml
+++ b/custom/dev/hr_zk_attendance/views/hr_attendance_view.xml
@@ -17,7 +17,7 @@
         <field name="inherit_id" ref="hr_attendance.view_attendance_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//tree/field[@name='employee_id']" position="after">
-                <field name="alert_flag"/>
+                <field name="alert_flag" sum="Total Alerts"/>
 <!--                <field name="is_bio_device"/>-->
                 <field name="created_by_user"/>
                 <field name="edit_source"/>
