hr_zk_attendance: fix bug bio download ,color compute for attendance records

--- a/custom/dev/hr_zk_attendance/views/hr_attendance_view.xml
+++ b/custom/dev/hr_zk_attendance/views/hr_attendance_view.xml
@@ -18,9 +18,9 @@
         <field name="arch" type="xml">
             <xpath expr="//tree/field[@name='employee_id']" position="after">
                 <field name="alert_flag" sum="Total Alerts"/>
-<!--                <field name="is_bio_device"/>-->
                 <field name="created_by_user"/>
                 <field name="edit_source"/>
+                <field name="one_session_work" sum="Total One Session"/>
             </xpath>
         </field>
     </record>
