--- a/odoo-17.0/addons/hr_attendance/views/hr_attendance_view.xml
+++ b/odoo-17.0/addons/hr_attendance/views/hr_attendance_view.xml
@@ -7,7 +7,7 @@
         <field name="name">hr.attendance.tree</field>
         <field name="model">hr.attendance</field>
         <field name="arch" type="xml">
-            <tree string="Employee attendances" decoration-success="color == 10" decoration-danger="color == 1" decoration-warning="color == 2" sample="1" duplicate="false">
+            <tree string="Employee attendances" decoration-success="color == 3" decoration-danger="color == 1" decoration-warning="color == 2" decoration-primary="color == 6" decoration-info="color == 4" decoration-muted="color == 5" sample="1" duplicate="false">
                 <field name="employee_id" widget="many2one_avatar_user"/>
                 <field name="check_in"/>
                 <field name="check_out" options="{}"/>
